--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -7,6 +7,81 @@
     tools:context=".menu">
 
     <Button
+        android:id="@+id/lvl1"
+        android:layout_width="48dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="72dp"
+        android:background="#FF0000"
+        android:backgroundTint="#AFACAC"
+        android:text="1"
+        android:textAlignment="center"
+        android:textColor="#070707"
+        android:textColorHighlight="#F60000"
+        android:textColorHint="#FF0000"
+        android:textColorLink="#FF0000"
+        app:iconTint="#FF0000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/lvl2"
+        android:layout_width="48dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="72dp"
+        android:background="#FF0000"
+        android:backgroundTint="#AFACAC"
+        android:text="2"
+        android:textAlignment="center"
+        android:textColor="#070707"
+        android:textColorHighlight="#F60000"
+        android:textColorHint="#FF0000"
+        android:textColorLink="#FF0000"
+        android:visibility="invisible"
+        app:iconTint="#FF0000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/lvl3"
+        android:layout_width="48dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="220dp"
+        android:layout_marginTop="72dp"
+        android:background="#FF0000"
+        android:backgroundTint="#AFACAC"
+        android:text="3"
+        android:textAlignment="center"
+        android:textColor="#070707"
+        android:textColorHighlight="#F60000"
+        android:textColorHint="#FF0000"
+        android:textColorLink="#FF0000"
+        android:visibility="invisible"
+        app:iconTint="#FF0000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/lvl4"
+        android:layout_width="48dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="316dp"
+        android:layout_marginTop="72dp"
+        android:background="#FF0000"
+        android:backgroundTint="#AFACAC"
+        android:text="4"
+        android:textAlignment="center"
+        android:textColor="#070707"
+        android:textColorHighlight="#F60000"
+        android:textColorHint="#FF0000"
+        android:textColorLink="#FF0000"
+        android:visibility="invisible"
+        app:iconTint="#FF0000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/lvl5"
         android:layout_width="48dp"
         android:layout_height="60dp"
@@ -83,79 +158,135 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/lvl4"
-        android:layout_width="48dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="316dp"
-        android:layout_marginTop="72dp"
-        android:visibility="invisible"
-        android:background="#FF0000"
-        android:backgroundTint="#AFACAC"
-        android:text="4"
-        android:textAlignment="center"
-        android:textColor="#070707"
-        android:textColorHighlight="#F60000"
-        android:textColorHint="#FF0000"
-        android:textColorLink="#FF0000"
-        app:iconTint="#FF0000"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/lvl3"
-        android:layout_width="48dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="220dp"
-        android:layout_marginTop="72dp"
-        android:visibility="invisible"
-        android:background="#FF0000"
-        android:backgroundTint="#AFACAC"
-        android:text="3"
-        android:textAlignment="center"
-        android:textColor="#070707"
-        android:textColorHighlight="#F60000"
-        android:textColorHint="#FF0000"
-        android:textColorLink="#FF0000"
-        app:iconTint="#FF0000"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/lvl2"
-        android:layout_width="48dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="72dp"
-        android:background="#FF0000"
-        android:visibility="invisible"
-        android:backgroundTint="#AFACAC"
-        android:text="2"
-        android:textAlignment="center"
-        android:textColor="#070707"
-        android:textColorHighlight="#F60000"
-        android:textColorHint="#FF0000"
-        android:textColorLink="#FF0000"
-        app:iconTint="#FF0000"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/lvl1"
+        android:id="@+id/lvl9"
         android:layout_width="48dp"
         android:layout_height="60dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="36dp"
         android:background="#FF0000"
         android:backgroundTint="#AFACAC"
-        android:text="1"
+        android:text="9"
         android:textAlignment="center"
         android:textColor="#070707"
         android:textColorHighlight="#F60000"
         android:textColorHint="#FF0000"
         android:textColorLink="#FF0000"
+        android:visibility="invisible"
+        app:iconTint="#FF0000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lvl5" />
+
+    <Button
+        android:id="@+id/lvl10"
+        android:layout_width="48dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="36dp"
+        android:background="#FF0000"
+        android:backgroundTint="#AFACAC"
+        android:text="10"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="#070707"
+        android:textColorHighlight="#F60000"
+        android:textColorHint="#FF0000"
+        android:textColorLink="#FF0000"
+        android:visibility="invisible"
+        app:iconTint="#FF0000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lvl6" />
+
+    <Button
+        android:id="@+id/lvl11"
+        android:layout_width="48dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="220dp"
+        android:layout_marginTop="36dp"
+        android:background="#FF0000"
+        android:backgroundTint="#AFACAC"
+        android:text="11"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="#070707"
+        android:textColorHighlight="#F60000"
+        android:textColorHint="#FF0000"
+        android:textColorLink="#FF0000"
+        android:visibility="invisible"
+        app:iconTint="#FF0000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lvl7" />
+
+    <Button
+        android:id="@+id/lvl12"
+        android:layout_width="48dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="316dp"
+        android:layout_marginTop="264dp"
+        android:background="#FF0000"
+        android:backgroundTint="#AFACAC"
+        android:text="12"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="#070707"
+        android:textColorHighlight="#F60000"
+        android:textColorHint="#FF0000"
+        android:textColorLink="#FF0000"
+        android:visibility="invisible"
         app:iconTint="#FF0000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/block9"
+        android:layout_width="48dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="44dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/lvl10"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.393"
+        app:srcCompat="@drawable/zamok" />
+
+    <ImageView
+        android:id="@+id/block10"
+        android:layout_width="48dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginEnd="44dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/lvl11"
+        app:layout_constraintStart_toEndOf="@+id/lvl9"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.393"
+        app:srcCompat="@drawable/zamok" />
+
+    <ImageView
+        android:id="@+id/block11"
+        android:layout_width="48dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginEnd="48dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/lvl12"
+        app:layout_constraintStart_toEndOf="@+id/lvl10"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.393"
+        app:srcCompat="@drawable/zamok" />
+
+    <ImageView
+        android:id="@+id/block12"
+        android:layout_width="48dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="47dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/lvl11"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.393"
+        app:srcCompat="@drawable/zamok" />
 
     <ImageView
         android:id="@+id/block2"
