--- a/app/src/main/res/layout/activity_level1.xml
+++ b/app/src/main/res/layout/activity_level1.xml
@@ -19,34 +19,33 @@
 
     <RadioGroup
         android:id="@+id/num4"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="202dp"
-        android:layout_marginTop="188dp"
-        android:layout_marginEnd="176dp"
-        android:layout_marginBottom="231dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="398dp"
-        android:layout_height="439dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="49dp"
-        android:layout_marginBottom="100dp"
+        android:layout_width="33dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="199dp"
+        android:layout_marginTop="303dp"
+        android:layout_marginEnd="179dp"
+        android:layout_marginBottom="396dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="415dp"
+        android:layout_height="620dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="49dp"
+        android:layout_marginBottom="72dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.84"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.524"
-        app:srcCompat="@drawable/safe_1"
-        tools:srcCompat="@drawable/safe_1"
+        app:srcCompat="@drawable/photo5260363687036826006"
+        tools:srcCompat="@drawable/photo5260363687036826006"
         tools:visibility="visible" />
 
     <TextView
@@ -57,10 +56,10 @@
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.252"
+        app:layout_constraintHorizontal_bias="0.248"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.562"
+        app:layout_constraintVertical_bias="0.506"
         tools:visibility="visible" />
 
     <TextView
@@ -78,148 +77,155 @@
 
     <RadioGroup
         android:id="@+id/num1"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="202dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="176dp"
-        android:layout_marginBottom="259dp"
+        android:layout_width="34dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="199dp"
+        android:layout_marginTop="259dp"
+        android:layout_marginEnd="178dp"
+        android:layout_marginBottom="440dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
         android:id="@+id/num2"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="233dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="145dp"
-        android:layout_marginBottom="259dp"
+        android:layout_width="30dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="245dp"
+        android:layout_marginTop="259dp"
+        android:layout_marginEnd="136dp"
+        android:layout_marginBottom="440dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
         android:id="@+id/num3"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="261dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="117dp"
-        android:layout_marginBottom="259dp"
+        android:layout_width="31dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="286dp"
+        android:layout_marginTop="259dp"
+        android:layout_marginEnd="95dp"
+        android:layout_marginBottom="441dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
         android:id="@+id/num5"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="233dp"
-        android:layout_marginTop="188dp"
-        android:layout_marginEnd="145dp"
-        android:layout_marginBottom="231dp"
+        android:layout_width="29dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="245dp"
+        android:layout_marginTop="304dp"
+        android:layout_marginEnd="137dp"
+        android:layout_marginBottom="396dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
         android:id="@+id/num6"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="261dp"
-        android:layout_marginTop="188dp"
-        android:layout_marginEnd="117dp"
-        android:layout_marginBottom="231dp"
+        android:layout_width="32dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="285dp"
+        android:layout_marginTop="304dp"
+        android:layout_marginEnd="95dp"
+        android:layout_marginBottom="397dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
         android:id="@+id/num7"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="202dp"
-        android:layout_marginTop="217dp"
-        android:layout_marginEnd="176dp"
-        android:layout_marginBottom="202dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="344dp"
+        android:layout_marginEnd="179dp"
+        android:layout_marginBottom="355dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
         android:id="@+id/num8"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="233dp"
-        android:layout_marginTop="217dp"
-        android:layout_marginEnd="145dp"
-        android:layout_marginBottom="202dp"
+        android:layout_width="33dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="244dp"
+        android:layout_marginTop="345dp"
+        android:layout_marginEnd="136dp"
+        android:layout_marginBottom="355dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
         android:id="@+id/num9"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="261dp"
-        android:layout_marginTop="217dp"
-        android:layout_marginEnd="117dp"
-        android:layout_marginBottom="202dp"
+        android:layout_width="31dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="286dp"
+        android:layout_marginTop="346dp"
+        android:layout_marginEnd="95dp"
+        android:layout_marginBottom="355dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
         android:id="@+id/num0"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="233dp"
-        android:layout_marginTop="243dp"
-        android:layout_marginEnd="145dp"
-        android:layout_marginBottom="176dp"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="243dp"
+        android:layout_marginTop="386dp"
+        android:layout_marginEnd="137dp"
+        android:layout_marginBottom="315dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
         android:id="@+id/redbutton"
-        android:layout_width="34dp"
-        android:layout_height="33dp"
-        android:layout_marginEnd="62dp"
-        android:layout_marginBottom="149dp"
+        android:layout_width="110dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="390dp"
+        android:layout_marginEnd="234dp"
+        android:layout_marginBottom="321dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.627"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.007" />
 
     <ImageButton
         android:id="@+id/mainbutton"
-        android:layout_width="400dp"
+        android:layout_width="413dp"
         android:layout_height="658dp"
         android:layout_marginStart="4dp"
         android:layout_marginBottom="4dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/stolv_3_0"
         tools:visibility="invisible" />
@@ -240,8 +246,8 @@
         android:id="@+id/error"
         android:layout_width="107dp"
         android:layout_height="45dp"
-        android:layout_marginStart="69dp"
-        android:layout_marginBottom="171dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginBottom="288dp"
         android:fontFamily="casual"
         android:text="ERROR"
         android:textColor="#000000"
