--- a/app/src/main/res/layout/activity_level1.xml
+++ b/app/src/main/res/layout/activity_level1.xml
@@ -21,15 +21,15 @@
         android:id="@+id/num4"
         android:layout_width="33dp"
         android:layout_height="32dp"
-        android:layout_marginStart="199dp"
-        android:layout_marginTop="303dp"
-        android:layout_marginEnd="179dp"
-        android:layout_marginBottom="396dp"
+        android:layout_marginStart="198dp"
+        android:layout_marginTop="259dp"
+        android:layout_marginEnd="183dp"
+        android:layout_marginBottom="329dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -52,14 +52,16 @@
         android:id="@+id/textView"
         android:layout_width="105dp"
         android:layout_height="37dp"
+        android:layout_marginStart="77dp"
+        android:layout_marginTop="291dp"
+        android:layout_marginEnd="234dp"
+        android:layout_marginBottom="292dp"
         android:textSize="30sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.248"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.506"
         tools:visibility="visible" />
 
     <TextView
@@ -79,143 +81,148 @@
         android:id="@+id/num1"
         android:layout_width="34dp"
         android:layout_height="32dp"
-        android:layout_marginStart="199dp"
-        android:layout_marginTop="259dp"
-        android:layout_marginEnd="178dp"
-        android:layout_marginBottom="440dp"
+        android:layout_marginStart="198dp"
+        android:layout_marginTop="215dp"
+        android:layout_marginEnd="182dp"
+        android:layout_marginBottom="373dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <RadioGroup
         android:id="@+id/num2"
         android:layout_width="30dp"
         android:layout_height="32dp"
-        android:layout_marginStart="245dp"
-        android:layout_marginTop="259dp"
-        android:layout_marginEnd="136dp"
-        android:layout_marginBottom="440dp"
+        android:layout_marginStart="244dp"
+        android:layout_marginTop="215dp"
+        android:layout_marginEnd="140dp"
+        android:layout_marginBottom="373dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.0" />
 
     <RadioGroup
         android:id="@+id/num3"
         android:layout_width="31dp"
         android:layout_height="31dp"
         android:layout_marginStart="286dp"
-        android:layout_marginTop="259dp"
-        android:layout_marginEnd="95dp"
-        android:layout_marginBottom="441dp"
+        android:layout_marginTop="215dp"
+        android:layout_marginEnd="98dp"
+        android:layout_marginBottom="374dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <RadioGroup
         android:id="@+id/num5"
         android:layout_width="29dp"
         android:layout_height="31dp"
         android:layout_marginStart="245dp"
-        android:layout_marginTop="304dp"
-        android:layout_marginEnd="137dp"
-        android:layout_marginBottom="396dp"
+        android:layout_marginTop="260dp"
+        android:layout_marginEnd="142dp"
+        android:layout_marginBottom="329dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <RadioGroup
         android:id="@+id/num6"
         android:layout_width="32dp"
         android:layout_height="30dp"
         android:layout_marginStart="285dp"
-        android:layout_marginTop="304dp"
-        android:layout_marginEnd="95dp"
-        android:layout_marginBottom="397dp"
+        android:layout_marginTop="260dp"
+        android:layout_marginEnd="98dp"
+        android:layout_marginBottom="330dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <RadioGroup
         android:id="@+id/num7"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginStart="200dp"
-        android:layout_marginTop="344dp"
-        android:layout_marginEnd="179dp"
-        android:layout_marginBottom="355dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="183dp"
+        android:layout_marginBottom="288dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <RadioGroup
         android:id="@+id/num8"
-        android:layout_width="33dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="244dp"
-        android:layout_marginTop="345dp"
-        android:layout_marginEnd="136dp"
-        android:layout_marginBottom="355dp"
+        android:layout_width="32dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="243dp"
+        android:layout_marginTop="301dp"
+        android:layout_marginEnd="139dp"
+        android:layout_marginBottom="287dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <RadioGroup
         android:id="@+id/num9"
         android:layout_width="31dp"
-        android:layout_height="31dp"
+        android:layout_height="33dp"
         android:layout_marginStart="286dp"
-        android:layout_marginTop="346dp"
-        android:layout_marginEnd="95dp"
-        android:layout_marginBottom="355dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="98dp"
+        android:layout_marginBottom="287dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <RadioGroup
         android:id="@+id/num0"
-        android:layout_width="31dp"
-        android:layout_height="30dp"
+        android:layout_width="34dp"
+        android:layout_height="31dp"
         android:layout_marginStart="243dp"
-        android:layout_marginTop="386dp"
-        android:layout_marginEnd="137dp"
-        android:layout_marginBottom="315dp"
+        android:layout_marginTop="342dp"
+        android:layout_marginEnd="139dp"
+        android:layout_marginBottom="248dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/redbutton"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="1.0" />
 
     <RadioGroup
         android:id="@+id/redbutton"
         android:layout_width="110dp"
-        android:layout_height="20dp"
+        android:layout_height="21dp"
         android:layout_marginStart="68dp"
-        android:layout_marginTop="390dp"
-        android:layout_marginEnd="234dp"
-        android:layout_marginBottom="321dp"
+        android:layout_marginTop="347dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="248dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.627"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.007" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/num0"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
         android:id="@+id/mainbutton"
@@ -246,7 +253,9 @@
         android:id="@+id/error"
         android:layout_width="107dp"
         android:layout_height="45dp"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="287dp"
+        android:layout_marginEnd="233dp"
         android:layout_marginBottom="288dp"
         android:fontFamily="casual"
         android:text="ERROR"
@@ -255,16 +264,20 @@
         android:textSize="32sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="323dp"
         android:text="menu"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/redbutton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
