norm land version

--- a/app/src/main/res/layout-land/activity_level1.xml
+++ b/app/src/main/res/layout-land/activity_level1.xml
@@ -8,12 +8,12 @@
 
     <RadioGroup
         android:id="@+id/num4"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="202dp"
-        android:layout_marginTop="188dp"
-        android:layout_marginEnd="176dp"
-        android:layout_marginBottom="231dp"
+        android:layout_width="33dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="198dp"
+        android:layout_marginTop="259dp"
+        android:layout_marginEnd="183dp"
+        android:layout_marginBottom="329dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -22,35 +22,36 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="398dp"
-        android:layout_height="439dp"
+        android:layout_width="415dp"
+        android:layout_height="620dp"
+        android:layout_marginStart="13dp"
         android:layout_marginTop="49dp"
-        android:layout_marginEnd="200dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="72dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.84"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3"
-        app:srcCompat="@drawable/safe_1"
-        tools:srcCompat="@drawable/safe_1"
+        app:srcCompat="@drawable/photo5260363687036826006"
+        tools:srcCompat="@drawable/photo5260363687036826006"
         tools:visibility="visible" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="105dp"
         android:layout_height="37dp"
-        android:text=""
+        android:layout_marginStart="77dp"
+        android:layout_marginTop="291dp"
+        android:layout_marginEnd="234dp"
+        android:layout_marginBottom="292dp"
         android:textSize="30sp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.252"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.562" />
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/textView4"
@@ -67,12 +68,12 @@
 
     <RadioGroup
         android:id="@+id/num1"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="202dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="176dp"
-        android:layout_marginBottom="259dp"
+        android:layout_width="34dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="198dp"
+        android:layout_marginTop="215dp"
+        android:layout_marginEnd="182dp"
+        android:layout_marginBottom="373dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -81,26 +82,28 @@
 
     <RadioGroup
         android:id="@+id/num2"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="233dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="145dp"
-        android:layout_marginBottom="259dp"
+        android:layout_width="30dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="244dp"
+        android:layout_marginTop="215dp"
+        android:layout_marginEnd="140dp"
+        android:layout_marginBottom="373dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.0" />
 
     <RadioGroup
         android:id="@+id/num3"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="261dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="117dp"
-        android:layout_marginBottom="259dp"
+        android:layout_width="31dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="286dp"
+        android:layout_marginTop="215dp"
+        android:layout_marginEnd="98dp"
+        android:layout_marginBottom="374dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -109,12 +112,12 @@
 
     <RadioGroup
         android:id="@+id/num5"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="233dp"
-        android:layout_marginTop="188dp"
-        android:layout_marginEnd="145dp"
-        android:layout_marginBottom="231dp"
+        android:layout_width="29dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="245dp"
+        android:layout_marginTop="260dp"
+        android:layout_marginEnd="142dp"
+        android:layout_marginBottom="329dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -123,12 +126,12 @@
 
     <RadioGroup
         android:id="@+id/num6"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="261dp"
-        android:layout_marginTop="188dp"
-        android:layout_marginEnd="117dp"
-        android:layout_marginBottom="231dp"
+        android:layout_width="32dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="285dp"
+        android:layout_marginTop="260dp"
+        android:layout_marginEnd="98dp"
+        android:layout_marginBottom="330dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -137,12 +140,12 @@
 
     <RadioGroup
         android:id="@+id/num7"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="202dp"
-        android:layout_marginTop="217dp"
-        android:layout_marginEnd="176dp"
-        android:layout_marginBottom="202dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="183dp"
+        android:layout_marginBottom="288dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -151,12 +154,12 @@
 
     <RadioGroup
         android:id="@+id/num8"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="233dp"
-        android:layout_marginTop="217dp"
-        android:layout_marginEnd="145dp"
-        android:layout_marginBottom="202dp"
+        android:layout_width="32dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="243dp"
+        android:layout_marginTop="301dp"
+        android:layout_marginEnd="139dp"
+        android:layout_marginBottom="287dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -165,75 +168,63 @@
 
     <RadioGroup
         android:id="@+id/num9"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="261dp"
-        android:layout_marginTop="217dp"
-        android:layout_marginEnd="117dp"
-        android:layout_marginBottom="202dp"
+        android:layout_width="31dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="286dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="98dp"
+        android:layout_marginBottom="287dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <RadioGroup
         android:id="@+id/num0"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="233dp"
-        android:layout_marginTop="243dp"
-        android:layout_marginEnd="145dp"
-        android:layout_marginBottom="176dp"
+        android:layout_width="34dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="243dp"
+        android:layout_marginTop="342dp"
+        android:layout_marginEnd="139dp"
+        android:layout_marginBottom="248dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/redbutton"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="1.0" />
 
     <RadioGroup
         android:id="@+id/redbutton"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="304dp"
-        android:layout_marginTop="255dp"
+        android:layout_width="110dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="347dp"
         android:layout_marginEnd="64dp"
-        android:layout_marginBottom="154dp"
+        android:layout_marginBottom="248dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/num0"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
         android:id="@+id/mainbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="400dp"
+        android:layout_width="413dp"
+        android:layout_height="658dp"
         android:layout_marginStart="4dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="4dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/stolv_3_0"
         tools:visibility="invisible" />
-
-    <TextView
-        android:id="@+id/error"
-        android:layout_width="107dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginBottom="168dp"
-        android:fontFamily="casual"
-        android:text="ERROR"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textSize="32sp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/lvl_name"
@@ -251,14 +242,31 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="166dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginEnd="341dp"
-        android:layout_marginBottom="368dp"
-        android:text="Menu"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="323dp"
+        android:text="menu"
+        app:layout_constraintBottom_toTopOf="@+id/redbutton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/error"
+        android:layout_width="107dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="287dp"
+        android:layout_marginEnd="233dp"
+        android:layout_marginBottom="288dp"
+        android:fontFamily="casual"
+        android:text="ERROR"
+        android:textColor="#000000"
+        android:textColorHighlight="#000000"
+        android:textSize="32sp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/mainbutton"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/mainbutton" />
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
