--- a/app/src/main/res/layout-land/activity_level1.xml
+++ b/app/src/main/res/layout-land/activity_level1.xml
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/photo5260363687036826006"
         tools:srcCompat="@drawable/photo5260363687036826006"
-        tools:visibility="visible" />
+        tools:visibility="invisible" />
 
     <TextView
         android:id="@+id/textView"
@@ -78,7 +78,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        tools:visibility="invisible" />
 
     <RadioGroup
         android:id="@+id/num2"
@@ -213,19 +214,6 @@
         app:layout_constraintTop_toTopOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.0" />
 
-    <ImageButton
-        android:id="@+id/mainbutton"
-        android:layout_width="413dp"
-        android:layout_height="658dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginBottom="4dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/stolv_3_0"
-        tools:visibility="invisible" />
-
     <TextView
         android:id="@+id/lvl_name"
         android:layout_width="wrap_content"
@@ -237,18 +225,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="323dp"
-        android:text="menu"
-        app:layout_constraintBottom_toTopOf="@+id/redbutton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/error"
@@ -268,5 +244,44 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="323dp"
+        android:text="menu"
+        app:layout_constraintBottom_toTopOf="@+id/redbutton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/stol"
+        android:layout_width="1139dp"
+        android:layout_height="528dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.601"
+        app:srcCompat="@drawable/stol_" />
+
+    <ImageView
+        android:id="@+id/mainbutton"
+        android:layout_width="105dp"
+        android:layout_height="72dp"
+        android:layout_marginStart="101dp"
+        android:layout_marginTop="313dp"
+        android:layout_marginEnd="202dp"
+        android:layout_marginBottom="336dp"
+        app:layout_constraintBottom_toBottomOf="@+id/stol"
+        app:layout_constraintEnd_toEndOf="@+id/stol"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="@+id/stol"
+        app:layout_constraintTop_toTopOf="@+id/stol"
+        app:layout_constraintVertical_bias="0.479"
+        app:srcCompat="?attr/selectableItemBackgroundBorderless" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
